syntax = "proto3";

package aggkit.aggsender.validator.v1;

import "agglayer/node/types/v1/certificate.proto";
import "agglayer/node/types/v1/certificate_id.proto";
import "agglayer/interop/types/v1/bytes.proto";
import "google/protobuf/empty.proto";

// Service for validating new certificates
service AggsenderValidator {
    // Method to get the status of the validator
    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
    // Method to validate a new certificate
    rpc ValidateCertificate(ValidateCertificateRequest) returns (ValidateCertificateResponse);
}

// Response Status()
message HealthCheckResponse {
  string version = 1; // Version of the validator
  string status = 2; // Status of the validator
  string reason = 3; // Reason of the validator status

}

// Request to validate a certificate
message ValidateCertificateRequest {
  // Previous certificate identifier
  agglayer.node.types.v1.CertificateId previous_certificate_id = 1;
  // Certificate to be validated
  agglayer.node.types.v1.Certificate certificate = 2;
}

// Type used as response to a certificate validation request.
message ValidateCertificateResponse {
  // The signature provided by the aggsender validator.
   agglayer.interop.types.v1.FixedBytes65 signature = 1;
}
